--- a/21BlackjackGrClass1StGrooup4.ipynb
+++ b/21BlackjackGrClass1StGrooup4.ipynb
@@ -84,11 +84,13 @@
         "  arr1 = np.array(arr)\n",
         "  cont = 0\n",
         "  narr1 = len(arr1)\n",
+        "  #llena la funcion a la mitad con 0 en posiciones aleatorias\n",
         "  while cont <= (narr1/2)-4:\n",
         "    index = math.floor(r.random() * narr1)\n",
         "    if arr1[index] != 0:\n",
         "      arr1[index] = 0\n",
         "      cont += 1\n",
+        "#Eliminacion de los 0 en la lista\n",
         "  return cleanDeck(arr1)\n"
       ],
       "execution_count": null,
@@ -230,6 +232,8 @@
       },
       "source": [
         "#Para punto 5\n",
+        "#Recibe el Deck con el que se va a jugar (es decir espanol o de poker), recibe el valor de dinero que ben apostara con un hot deck, recibe el valor de dinero que ben apostara con un cold deck y\n",
+        "#por ultimo recibe el numero de veces que Ben va a jugar. La funcion retorna las ganancias totales de Ben en ese numero de juegos\n",
         "def benBlackJack(coldArr, winHot, winCold, n):\n",
         "  hotDeck = [1,1,1,1,2,2,2,2,3,3]\n",
         "\n",
@@ -576,6 +580,7 @@
         "id": "a1e8hlSUAjvu"
       },
       "source": [
+        "#De este arreglo ya se quitaron las cartas 7, 7 y 5 como se pide en el punto\n",
         "arr48Modified = [1,2,3,4,5,6,0,10,11,12,1,2,3,4,5,6,0,8,9,10,11,12,1,2,3,4,0,6,7,8,9,10,11,12,1,2,3,4,5,6,7,8,9,10,11,12]"
       ],
       "execution_count": null,
@@ -634,6 +639,7 @@
         "id": "xfMweCBBkzgV"
       },
       "source": [
+        "#De este arreglo ya se quitaron las cartas 7, 7 y 5 como se pide en el punto\n",
         "arr52Modified = [1,2,3,4,5,6,0,8,9,10,10,10,10,1,2,3,4,5,6,0,8,9,10,10,10,10,1,2,3,4,0,6,7,8,9,10,10,10,10,1,2,3,4,5,6,7,8,9,10,10,10,10]"
       ],
       "execution_count": null,
@@ -1195,8 +1201,11 @@
         }
       },
       "source": [
+        "#como la funcion retorna las ganancias de ben la dividimos en el numero de fines de semanas al final para que nos de un promedio\n",
         "value1 = benBlackJack(arr48, 1000, 10, 600*10000)/10000\n",
         "print(\"Dinero esperado en un fin de semana con el mazo espanol: \" + str(value1))\n",
+        "\n",
+        "#como la funcion retorna las ganancias de ben la dividimos en el numero de fines de semanas al final para que nos de un promedio\n",
         "value2 = benBlackJack(arr52, 1000, 10, 600*10000)/10000\n",
         "print(\"Dinero esperado en un fin de semana con el mazo de poker: \" + str(value2))"
       ],
@@ -1263,9 +1272,11 @@
         }
       },
       "source": [
+        "#como la funcion retorna las ganancias de ben la dividimos en el numero de fines de semanas al final para que nos de un promedio\n",
         "value1 = benBlackJack(arr48, 1000, 10, 600*1000000)/1000000\n",
         "print(\"Dinero esperado en un fin de semana con el mazo espanol: \" + str(value1))\n",
         "\n",
+        "#como la funcion retorna las ganancias de ben la dividimos en el numero de fines de semanas al final para que nos de un promedio\n",
         "value2 = benBlackJack(arr52, 1000, 10, 600*1000000)/1000000\n",
         "print(\"Dinero esperado en un fin de semana con el mazo de poker: \" + str(value2))"
       ],
